# rot-management-gui

./: Cargo.toml  README.md  cargo-sources.json  dev.mariinkys.RotManagementGui.json  justfile
i18n/en/: fa_management_gui.ftl  rot_management_gui.ftl
i18n/es/: rot_management_gui.ftl
resources/: dev.mariinkys.RotManagementGui.desktop  dev.mariinkys.RotManagementGui.metainfo.xml
src/: app.rs  icons.rs  main.rs
src/app/: core.rs  screen.rs  style.rs  utils.rs
src/app/core/: config.rs  layered_packages.rs  rollback.rs  system_status.rs  update_applications.rs  update_system.rs  utils.rs
src/app/screen/: about.rs  config.rs  rollback.rs  system_status.rs  update_applications.rs  update_system.rs
src/app/screen/system_status/: layered_packages.rs
src/app/utils/: ui.rs
src/app/widgets/: mod.rs  toast.rs
src/app/widgets/spinners/: circular.rs  easing.rs  linear.rs  mod.rs
