[package]
name = "rot-management-gui"
version = "0.1.0"
edition = "2024"

authors = ["mariinkys"]
license = "GPL-3.0-only"
repository = "https://github.com/mariinkys/rot-management-gui"
keywords = [
    "gui",
    "management",
    "fedora",
    "atomic",
    "linux",
    "silverblue",
    "rpm",
    "ostree",
]
categories = ["gui", "applications"]

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", default-features = false, features = [
    "tokio",
    "wgpu",
    "tiny-skia",
    "advanced",
    "image",
    "svg",
    "debug",
    "canvas",
] }
anywho = "0.1.2"
i18n-embed-fl = "0.10.0" # needed for fl support
rust-embed = "8.7.2" # needed for fl support
tokio = { version = "1.47.1", features = ["fs", "process"] }
# futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.11.0"
dirs = "6.0.0"
freedesktop-icons = "0.4.0"
open = "5.3.2"
lyon_algorithms = "1.0.16"                             # needed for spinners

[dependencies.i18n-embed]
version = "0.16.0"
features = ["fluent-system", "desktop-requester"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependenc.
# Slows compile times, marginal improvements.
lto = "thin"
